Việt hoá nốt, xoá bớt những thứ k cần thiết, format lại code, thêm footer.